--- a/base_component/src/main/res/values/strings.xml
+++ b/base_component/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">base_component</string>
+    <string name="please_check_net">请检查网络</string>
+    <string name="R_string_bad_server">request error</string>
+    <string name="R_string_time_out_server">request error</string>
 </resources>
