分类界面填充数据

--- a/desk_newest_component/src/main/res/values/strings.xml
+++ b/desk_newest_component/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">desk_newest_component</string>
+    <string name="newest_url">http://service.picasso.adesk.com/v1/vertical%1$s/vertical</string>
 </resources>
